tests/rosetta/out/Java/apply-a-digital-filter-direct-form-ii-transposed-.error
javac: exit status 1
/tmp/ApplyADigitalFilterDirectFormIiTransposed.java:16: error: bad operand types for binary operator '*'
                tmp = tmp + ((Number)((Number)b.get(j)).doubleValue() * ((Number)input.get(i - j)).doubleValue()).doubleValue();
                                                                      ^
  first type:  Number
  second type: double
/tmp/ApplyADigitalFilterDirectFormIiTransposed.java:21: error: bad operand types for binary operator '*'
                tmp = tmp - ((Number)((Number)a.get(j + 1)).doubleValue() * ((Number)out.get(i - j - 1)).doubleValue()).doubleValue();
                                                                          ^
  first type:  Number
  second type: double
2 errors
